      (Closes: #187621)

    - debian/debver2localesdep.pl: add clever version recognition for binary
      only NMU or source NMU/local packaging.
      Patched by Gerhard Tonn <GerhardTonn@gammatau.de>.

    - debian/patches/glibc23-linuxthreads-fix.dpatch: add to revert Jakub's
      change in 2003-04-02 to be enable to compile librt.so for the present.

 -- GOTO Masanori <gotom@debian.or.jp>  Sun, 23 Mar 2003 02:39:58 +0900

glibc (2.3.1-17) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/libc/DEBIAN/preinst: Add NSS restarting preinstallation
      service detection routine and messages.  xdm, kdm, gdm,
      postgresql, xscreensaver needs user's hand restart.
      (Closes: #165258, #165915, #184036, #184495, #188724)
    - debian/libc/DEBIAN/postinst: Edit NSS restarting messages to
      adopt some preinst messages.

 -- GOTO Masanori <gotom@debian.or.jp>  Sat, 19 Apr 2003 22:01:40 +0900

glibc (2.3.1-16) unstable; urgency=high

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/glibc23-cert-rpcxdr.dpatch: Fix "CERT Advisory
      CA-2003-10 Integer overflow in Sun RPC XDR library routines"
      (Closes: #185508).

    - debian/packages.d/glibc-doc.mk: Fix unneeded file '[' and ']' in
      /usr/share/man/man3.
    - These debian/patches/<below files> are removed from cvs because
      they are no longer being used and were superceeded by CVS patches:
      - libgcc-compat-mips.dpatch
      - libgcc-compat-sparc.dpatch
    - debian/libc/DEBIAN/postinst: add spamassassin to restart during
      upgrade from 2.2 to 2.3.  (Closes: #185275)
    - debian/control.in/opt: add one empty line at the end of file.
      This fix avoids opt packages to get mixed debian/control
      message with libc-udeb package.  (Closes: #185688)

 -- GOTO Masanori <gotom@debian.or.jp>  Tue, 18 Mar 2003 00:04:13 +0900

glibc (2.3.1-15) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>