@@ -137,6 +137,11 @@ glibc (2.3.2-1) unstable; urgency=low
     - debian/patches/glibc23-linuxthreads-fix.dpatch: add to revert Jakub's
       change in 2003-04-02 to be enable to compile librt.so for the present.
 
+    - debian/libc/etc/init.d/devpts.sh: Modify mounting devpts for 2.5.68 and
+      later.  As of 2.5.68, devpts is not automounted when using devfs. So
+      even in that case, devpts needs to be mounted via the devpts.sh script
+      as well as the case that devfs is not used.  (Closes: #189792)
+
  -- GOTO Masanori <gotom@debian.or.jp>  Sun, 23 Mar 2003 02:39:58 +0900
 
 glibc (2.3.1-17) unstable; urgency=low
